initial code for google search

--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,14 @@
         "https://chat.openai.com/chat/",
         "https://chat.openai.com/chat/*"
       ]
+    },
+    {
+      "js": [
+        "lib/google-content.js"
+      ],
+      "matches": [
+        "https://www.google.com/search?*"
+      ]
     }
   ]
 }
