--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
   "name": "GPT Search Helper",
-  "version": "1.0",
-  "description": "TODO: ....",
+  "version": "0.1",
+  "description": "A plugin that augments Google and Stackoverflow search results with ChatGPT responses.",
   "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   },
   "permissions": [
     "webNavigation"
